# proj_garagem

./: .env  .env_exemplo  .gitignore  .pdm-python  Dockerfile  build.sh  db.sqlite3  pyproject.toml  render.yaml  requirements.txt
config/: settings.py  urls.py
core/garagem/: admin.py
core/garagem/models/: veiculo.py
core/garagem/serializers/: __init__.py  modelo.py  veiculo.py
core/garagem/views/: veiculo.py
src/: db.sqlite3
src/config/: router.py  settings.py  urls.py
src/core/garagem/: admin.py  apps.py
src/core/garagem/admin/: __init__.py  acessorio.py  compra.py  cor.py  modelo.py  veiculo.py
src/core/garagem/migrations/: 0001_initial.py  0002_veiculo_capa.py  0003_alter_cor_options_alter_cor_nome.py  0004_compra.py  0005_itenscompra.py  0006_compra_data_compra_tipo_pagamento.py
src/core/garagem/models/: __init__.py  acessorio.py  compra.py  cor.py  modelo.py  veiculo.py
src/core/garagem/serializers/: __init__.py  acessorio.py  compra.py  cor.py  modelo.py  veiculo.py
src/core/garagem/views/: __init__.py  acessorio.py  compra.py  cor.py  modelo.py  veiculo.py
src/core/uploader/: admin.py  router.py  views.py
src/core/uploader/migrations/: 0001_initial.py
src/core/uploader/models/: document.py
src/core/uploader/serializers/: document.py  image.py
src/core/uploader/views/: __init__.py  create.py  document.py  image.py
src/core/usuario/: admin.py  router.py
src/core/usuario/migrations/: 0001_initial.py  0002_usuario_foto.py  0003_usuario_tipo_usuario.py
src/core/usuario/models/: usuario.py
src/core/usuario/serializers/: usuario.py
src/core/usuario/views/: usuario.py
