[project]
name = "proj_garagem"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "renascm_", email = "renatochagas.m@gmail.com_"},
]
dependencies = [
    "django>=4.2.20", 
    "djangorestframework>=3.16.0", 
    "django-extensions>=4.1", 
    "python-dotenv>=1.1.0", 
    "netifaces>=0.11.0", 
    "dj-database-url>=2.3.0", 
    "psycopg2-binary>=2.9.10", 
    "uvicorn>=0.34.2", 
    "gunicorn>=23.0.0", 
    "whitenoise>=6.9.0"
]

dev-dependencies = [
    "pygraphviz>=1.11"
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[[tool.pdm.autoexport]]
filename = "requirements.txt"
without-hashes = "true"

[tool.pdm]
distribution = false

[tool.pdm.scripts]
pre_dev = "python ./scripts/set_my_ip.py"
dev = "python manage.py runserver 0.0.0.0:19003"
createsuperuser = "python manage.py createsuperuser"
pre_migrate = "python manage.py makemigrations"
migrate = "python manage.py migrate"
startapp = "python manage.py startapp {args}"

